--- a/Arduino Remote/Podfile
+++ b/Arduino Remote/Podfile
@@ -3,20 +3,20 @@ install! 'cocoapods', :warn_for_unused_master_specs_repo => false
 platform :ios, '14.0'
 
 target 'Arduino Remote' do
-
   pod 'Alamofire'
-
-  # Pods for Arduino Remote
+  pod 'RxSwift'
+  pod 'RxCocoa'
 
   target 'Arduino RemoteTests' do
     inherit! :search_paths
-
     pod 'Alamofire'
+    pod 'RxSwift'
+    pod 'RxCocoa'
   end
 
   target 'Arduino RemoteUITests' do
-
     pod 'Alamofire'
+    pod 'RxSwift'
+    pod 'RxCocoa'
   end
-
 end
